--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@ footer {
 
 .main-container {
   flex-wrap: wrap;
-  padding-bottom: 15rem;
+  padding-bottom: 18rem;
 }
 
 .modal {
@@ -74,3 +74,9 @@ nav .nav-link:hover {
   max-width: 200px;
 }
 
+.product-img {
+  width: 100%;
+  height: 200px;
+  background-position: center;
+  background-size: cover;
+}
