undelete action added, dbuser jefe created

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,6 +73,10 @@ table th {
   vertical-align: middle!important;
 }
 
+.opacity {
+  opacity: 0.5;
+}
+
 /* header */
 .logo-header {
   height: 4rem;
